tests/type_errors/int_where_list_expected.nos
# expect_error: type mismatch
# Test: passing Int where List is expected

sumList(xs: List[Int]) = xs.fold(0, (acc, x) => acc + x)

main() = sumList(42)
